fixed comment area spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -224,6 +224,10 @@ article.hentry{
   margin-top: 20px;
 }
 
+#comments h3{
+  padding-bottom: 20px;
+}
+
 
 /* ==========================================================================
    Footer
